@@ -1,3 +1,7 @@
+2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* flower/include/std-vector.hh (slice): Remove.
+
 2006-02-01  Graham Percival  <gpermus@gmail.com>
 
 	* Documentation/user/putting.itely: fixes from Erik.
